fixade alignment på headern

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,13 +1,12 @@
 header{
 	width:100%; height: 15vh;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
-	justify-content: center;
 
 }
 header > *{
-	width:50%;
+	width:33%;
 
 }
 
