--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #d8d8d8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #7b7b7b;
 }
 
 
